tp2/tp-minikube/myservice-loadbalancing-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myservicetp2
  name: myservicetp2
spec:
  ports:
    - nodePort: 30945
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: myservicetp2
  type: LoadBalancer
