tp2/tp-minikube/myservice-service.yml
apiVersion: v1
kind: Service
metadata:
  name: myservicetp2
spec:
  ports:
    - nodePort: 31281
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: myservicetp2
  type: NodePort
