tp2/tp-minikube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: myservicetp2.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myservicetp2
                port:
                  number: 8080
